# AERSP-424-Final-Project

./: 12_4_24.cpp  Final_Code_Version.cpp  GameLog_10_41_13.txt  GameLog_10_50_31.txt  GameLog_Sample.txt  Main.cpp  README.md  Rebuild.cpp  Updated_Visuals_Outputs.cpp  Updated_Visuals_Working_Blitz.cpp
12_18_Final/: CMakeLists.txt
12_18_Final/src/: EventLogger.cpp  EventLogger.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp
Final/: CMakeLists.txt
Final/src/: Constants.h  game.cpp  player.cpp
OldCode/: 12_4_24.cpp  12_5_24.cpp  3_Powerup_Updated_Version.cpp  Final_Code_Version.cpp  GameLog_Sample.txt  Rebuild.cpp
OldCode/Presentation_Build/src/: Game.h  Player.h  game.cpp
